--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(hw4_atam VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(hw4_atam hw4_atam.cpp)
+add_executable(hw4_atam debugger.c)
 set_property(TARGET hw4_atam PROPERTY C_STANDARD 99)
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
